2011-11-07  Roland Steiner  <rolandsteiner@chromium.org>

        https://bugs.webkit.org/show_bug.cgi?id=70223
        CSSStyleSheet: finding the owner node should be in its own method

        Add styleSheetOwnerNode() function that returns the owner Node of the style sheet, or 0.

        Reviewed by Dimitri Glazkov.

        No new tests. (refactoring)

        * css/CSSStyleSheet.cpp:
        (WebCore::CSSStyleSheet::styleSheetOwnerNode):
        (WebCore::CSSStyleSheet::document):
        * css/CSSStyleSheet.h:

2011-11-07  Yury Semikhatsky  <yurys@chromium.org>

        [Chromium] Web Inspector: use native worker inspector instead of fake workers
        https://bugs.webkit.org/show_bug.cgi?id=71670

        Removed context menu option for switching between native and "fake" workers
        debugger. Native debugger is used by default on platforms that support it.

        Reviewed by Pavel Feldman.

        * English.lproj/localizedStrings.js:
        * inspector/front-end/ScriptsPanel.js:
        (WebInspector.ScriptsPanel.prototype._toggleFormatSource):
        * inspector/front-end/Settings.js:
        (WebInspector.Settings):
        * inspector/front-end/WorkersSidebarPane.js:
        (WebInspector.WorkerListSidebarPane):
        (WebInspector.WorkerListSidebarPane.prototype._autoattachToWorkersClicked):
        * inspector/front-end/scriptsPanel.css:
        (#shared-workers-list):

2011-11-07  Vsevolod Vlasov  <vsevik@chromium.org>

        Web Inspector: Add advanced search shortcut to ShortcutsScreen.
        https://bugs.webkit.org/show_bug.cgi?id=71302

        Reviewed by Pavel Feldman.

        * English.lproj/localizedStrings.js:
        * inspector/front-end/AdvancedSearchController.js:
        (WebInspector.AdvancedSearchController.createShortcut):
        * inspector/front-end/inspector.js:
        (WebInspector._registerShortcuts):

2011-11-07  Andreas Kling  <kling@webkit.org>
