@@ -13,7 +13,6 @@ body {
     font-family: Lucida Grande, sans-serif;
     font-size: 10px;
     margin: 0;
-    -webkit-text-size-adjust: none;
     -webkit-user-select: none;
 }
 
